--- a/src/index.html
+++ b/src/index.html
@@ -36,5 +36,5 @@ body {
     s.parentNode.insertBefore(wf, s);
   })();
 </script>
-<script src="index.js"></script>
+<script src="main.js"></script>
 </body></html>
